--- a/templates/main/messages.html
+++ b/templates/main/messages.html
@@ -5,33 +5,34 @@
   <div class="container board">
         <h2 class="pb-6" align="center">Wiadomości</h2>
         <table class="table messageTable">
-            <thead>
-              <tr>
-                <th scope="col">#</th>
-                <th scope="col">Temat</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <th scope="row">1</th>
-                <td>Twoje rozwiązanie zostało ocenione!</td>
-                <td>Otwórz</td>
-                <td>Usuń</td>
-              </tr>
+          <thead>
+            <tr>
+              <th scope="col">#</th>
+              <th scope="col">Temat</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <th scope="row">1</th>
+              <td>Twoje rozwiązanie zostało ocenione!</td>
+              <td class="messageTableButton">Otwórz</td>
+              <td class="messageTableButton">Usuń</td>
+            </tr>
 
-              <tr>
-                <th scope="row">2</th>
-                <td>Twoje rozwiązanie zostało ocenione!</td>
-                <td>Otwórz</td>
-                <td>Usuń</td>
-              </tr><tr>
-                <th scope="row">3</th>
-                <td>Twoje rozwiązanie zostało ocenione!</td>
-                <td>Otwórz</td>
-                <td>Usuń</td>
-              </tr>
-            </tbody>
-          </table>
+            <tr>
+              <th scope="row">2</th>
+              <td>Twoje rozwiązanie zostało ocenione!</td>
+              <td class="messageTableButton">Otwórz</td>
+              <td class="messageTableButton">Usuń</td>
+            </tr><tr>
+              <th scope="row">3</th>
+              <td>Twoje rozwiązanie zostało ocenione!</td>
+              <td class="messageTableButton">Otwórz</td>
+              <td class="messageTableButton">Usuń</td>
+            </tr>
+            
+          </tbody>
+        </table>
   </div>
 </section>
 {% endblock %}
