--- a/templates/main/playerProfile.html
+++ b/templates/main/playerProfile.html
@@ -78,7 +78,7 @@
 
 
                     </tbody>
-                  </table>
+                </table>
                 <div>
                     <p class="h3 average" align="center">Średnia z zadań: 77%</p>
                 </div>
@@ -93,7 +93,27 @@
             <!-- OBECNOŚCI -->
             <div id="presences" class="tab-pane fade">
                 <h3 class="text-center">Obecności</h3>
-                <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
+                <table class="table presencesTable">
+                    <thead>
+                        <tr>
+                            <th>#</th>
+                            <th>Data</th>
+                            <th>Status</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>1. </td>
+                            <td>10-10-2018 </td>
+                            <td style="color: red">Nieobecny </td>
+                        </tr>
+                        <tr>
+                            <td>2. </td>
+                            <td>17-10-2018 </td>
+                            <td style="color: green">Obecny </td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
 
             <!-- MEDALE -->
