Admin>groupDetails view

--- a/templates/admin/groups.html
+++ b/templates/admin/groups.html
@@ -15,7 +15,7 @@
                     <tbody>
                         <tr>
                             <td>Grupa_10-45
-                            <td><button class="btn btn-primary">Pokaż</button>
+                            <td><button class="btn btn-primary" onclick="location.href = 'groupDetails';">Pokaż</button>
                             <td><button class="btn btn-info">Edytuj</button>
                             <td><button class="btn btn-danger">Usuń</button>
                             <td><button class="btn btn-basic">Napisz</button>
