--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -10,11 +10,14 @@
     <link rel="stylesheet" href="{% static 'css/bootstrap-reboot.min.css' %}" />
     <link rel="stylesheet" href="{% static 'css/bootstrap-grid.min.css' %}" />
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
-    <link rel="stylesheet" href="{% static 'css/adminBase.css' %}" />
-    <link rel="stylesheet" href="{% static 'css/groups.css' %}" />
-    <link rel="stylesheet" href="{% static 'css/responses.css' %}" />
-    <link rel="stylesheet" href="{% static 'css/excercises.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/bootstrap-datetimepicker.min.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/admin/base.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/admin/groups.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/admin/responses.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/admin/excercises.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/admin/groupDetails.css' %}" />
 
+    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
@@ -35,8 +38,13 @@
         </div>
         <div class="mainPlace">
             {% block content %}{% endblock %}
+            <p>Tu narazie ten datetime-picker próbowałem zrobić V V V</p>
+            <input size="16" type="text" class="form-control" id="datetime2" readonly>
         </div>
-    
+
+
+    <script src="{% static 'js/bootstrap-datetimepicker.min.js' %}"></script>
+    <script src="{% static 'js/datePicker.js' %}"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script>
@@ -51,6 +59,7 @@
             this.className += " active";
           });
         }
-        </script>
+    </script>
+    
 </body>
 </html>
