--- a/templates/admin/responses.html
+++ b/templates/admin/responses.html
@@ -21,18 +21,14 @@
         </div>
         <div class="form-group">
             <label><b>Medal</b></label>
-            <input class="form-control" placeholder="Zasłużył na medal?">
-            <div class="dropdown">
-                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
-                    aria-haspopup="true" aria-expanded="false">
-                    Dropdown button
-                </button>
-                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                </div>
-            </div>
+            <select class="form-control">
+                <option value="" selected>-</option>
+                <option value="Medal precyzja Odyna">Medal precyzja Odyna</option>
+                <option value="Szybkie kopytko">Szybkie kopytko</option>
+                <option value="Medal za wytrwałość">Medal za wytrwałość</option>
+                <option value="Odważny jak niedźwiedź">Odważny jak niedźwiedź</option>
+            </select>
+            <small class="form-text text-muted">Zasłużył na medal?</small>
         </div>
         <div class="text-center">
             <button type="submit" class="btn btn-primary">Oceń</button>
