--- a/templates/admin/groupDetails.html
+++ b/templates/admin/groupDetails.html
@@ -85,12 +85,12 @@
                             <th scope="row">1</th>
                             <td>
                                 <div class="form-group">
-                                    <input type="date" name="bday" max="3000-12-31" 
+                                    <input type="datetime-local" name="bday" max="3000-12-31" 
                                         min="1000-01-01" class="form-control">
                                 </div>
                             </td>
                             <td>
-                                <input type="date" name="bday" max="3000-12-31" 
+                                <input type="datetime-local" name="bday" max="3000-12-31" 
                                     min="1000-01-01" class="form-control">
                             </td>
                         </tr>
@@ -98,12 +98,12 @@
                             <th scope="row">1</th>
                             <td>
                                 <div class="form-group">
-                                    <input type="date" name="bday" max="3000-12-31" 
+                                    <input type="datetime-local" name="bday" max="3000-12-31" 
                                         min="1000-01-01" class="form-control">
                                 </div>
                             </td>
                             <td>
-                                <input type="date" name="bday" max="3000-12-31" 
+                                <input type="datetime-local" name="bday" max="3000-12-31" 
                                     min="1000-01-01" class="form-control">
                             </td>
                         </tr>
