--- a/templates/main/excercise.html
+++ b/templates/main/excercise.html
@@ -2,49 +2,83 @@
 
 <!DOCTYPE html>
 <html>
+
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="{% static 'css/bootstrap-reboot.min.css' %}" />
-    <link rel="stylesheet" href="{% static 'css/bootstrap-grid.min.css' %}" />
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
-    <link rel="stylesheet" href="{% static 'css/lessonExcercise.css' %}" />
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Page Title</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="{% static 'css/bootstrap-reboot.min.css' %}" />
+  <link rel="stylesheet" href="{% static 'css/bootstrap-grid.min.css' %}" />
+  <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
+  <link rel="stylesheet" href="{% static 'css/lessonExcercise.css' %}" />
+  <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
+  <script src="{% static 'js/bootstrap.min.js' %}"></script>
 </head>
+
 <body>
-    <div class="container board">
-        <div class="container">
-            <div align="center">
-              <span class="close">&times;</span>
-              <h2>Etap : {{stage.name}}</h2>
-              <h1></h1>
-            </div>
-            <p class="excerciseContent">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-              incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-              dolore eu fugiat nulla pariatur.</p>
-            <p class="excerciseContent">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
-              laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae
-              dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
-              consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
-      
-            <div align="right">
-              <button class="btn btn-warning promptButton">Podpowiedź</button>
-            </div>
-            <form>
-              <label class="font-italic responseLabel" for="comment">Odpowiedź:</label>
-              <div class="form-group response">
-                <textarea class="form-control" rows="5" id="comment" placeholder="Miejsce na odpowiedź..."></textarea>
-                <p>Nagroda:</p>
-                <div class="float-right mb-5">
-                  <button class="btn btn-success">Wyślij</button>
-                </div>
-                <span>100 PKT EXP</span></br>
-                <span>100 PKT RANKINGOWYCH</span>
-              </div>
-            </form>
+  <div class="container board">
+    <div class="container">
+      <div align="center">
+        <span class="close">&times;</span>
+        <h2>Etap : {{stage.name}}</h2>
+        <h1></h1>
+      </div>
+      <p class="excerciseContent">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+        nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+        dolore eu fugiat nulla pariatur.</p>
+      <p class="excerciseContent">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
+        laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae
+        dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
+        consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
+
+      <div align="right">
+        {% if prompt %}
+          <p class="promptContent font-weight-light font-italic"><u>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</u></p>
+        {% else %}
+          <button type="button" class="btn btn-warning promptButton" data-toggle="modal" data-target="#myModal">Podpowiedź</button>
+        {% endif %}
+      </div>
+
+      <form>
+        <label class="font-italic responseLabel" for="comment">Odpowiedź:</label>
+        <div class="form-group response">
+          <textarea class="form-control" rows="5" id="comment" placeholder="Miejsce na odpowiedź..."></textarea>
+          <p>Nagroda:</p>
+          <div class="float-right mb-5">
+            <button class="btn btn-success">Wyślij</button>
           </div>
+          <span>100 PKT EXP</span></br>
+          <span>100 PKT RANKINGOWYCH</span>
+        </div>
+      </form>
+      
     </div>
+  </div>
+
+  <div class="container">
+      <div class="modal fade" id="myModal" role="dialog">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title">Czy chcesz skorzystać z podowiedzi?</h4>
+            </div>
+            <div class="modal-body">
+              <p>Odejmie to punkty czy coś tam...</p>
+            </div>
+            <div class="modal-footer modalButtons">
+                <button type="button" class="btn btn-success" >Akceptuj</button>
+                <button type="button" class="btn btn-danger" data-dismiss="modal">Zamknij</button>
+            </div>
+          </div>
+          
+        </div>
+      </div>
+      
+    </div>
+  
 </body>
+
+
 </html>
