migrations and update views

--- a/templates/main/lesson.html
+++ b/templates/main/lesson.html
@@ -7,15 +7,18 @@
           <span class="h3">Etap {{stage.id}} : {{stage.name}}</span>
         </div>
         {% for task in tasks %}
-          <div id="myBtn" taskId="{{forloop.counter}}" class="row lesson">
-            <div class="col-3 align-self-center">
-              <img class="image" src="/static/img/Lesson/zad{{stage.id}}_{{forloop.counter}}.png">
-            </div>
-            <div class="col-9 lessonInfo align-self-center pt-md-1" align="center">
-              <span class="d-block lessonInfo-Number">Zadanie {{ forloop.counter }}</span>
-              <span class="d-block lessonInfo-Name">{{task.title}}</span>
-            </div>
-          </div>
+          <form method="POST" action="/main/lesson/{{stage.id}}/excercise">
+            {% csrf_token %}
+            <button id="myBtn" taskId="{{forloop.counter}}" class="row lesson" type="submit">
+              <div class="col-3 align-self-center">
+                <img class="image" src="/static/img/Lesson/zad{{stage.id}}_{{forloop.counter}}.png">
+              </div>
+              <div class="col-9 lessonInfo align-self-center pt-md-1" align="center">
+                <span class="d-block lessonInfo-Number">Zadanie {{ forloop.counter }}</span>
+                <span class="d-block lessonInfo-Name">{{task.title}}</span>
+              </div>
+            </button>
+          </form>
         {% endfor %}
   </div>
 </section>
